Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-543

Missing UNLINK record on overwritting rename

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.2.0, Lustre 2.1.2
    • Lustre 2.0.0, Lustre 2.1.0
    • None
    • 3
    • 4806

      If there are 2 files A and B, and if B is removed this way: rename(A,B)
      there is no information in MDT changelog to indicate that B was unlinked.
      I think an UNLINK record about B would be appropriate in this case.

            niu Niu Yawei (Inactive)
            leibovici-cea Thomas LEIBOVICI - CEA (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: